<resources>
    <string name="app_name">Hisaab</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="logout">LogOut</string>
    <string name="myIncome">My Incomes</string>
    <string name="myExpense">My Expense</string>
    <string name="myGoals">My Goals</string>
    <string name="ReciveLoans">My Recived Loans</string>
    <string name="myloans">My Loans</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="UserName" />
    <string name="country_prompt">Choose a country</string>

    <string-array name="User_arrays">
        <item>Student</item>
        <item>Professional</item>
        <item>HouseWife</item>
    </string-array>
    <string name="title_activity_testlogin">Sign in</string>
    <string name="title_activity_navigationbar">navigationbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


</resources>
